--- a/css/mycss.css
+++ b/css/mycss.css
@@ -14,6 +14,9 @@ tbody tr td .iconku,
 .btnku {
   color: #ffff !important;
 }
+.btn {
+  background: #013161;
+}
 /* .cardlogin .card-body form .d-flex .btncustom {
   background: #013161;
 } */
